--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "compression": "^1.7.5",
     "express": "^4.21.1",
     "node-fetch": "^3.3.2",
     "node-html-parser": "^6.1.13"
