--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "compression": "^1.7.5",
     "express": "^4.21.1",
+    "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "node-html-parser": "^6.1.13"
   }
