Add parallelism to improve loading times
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/traagel/bizsnuff?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.1",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
-    "node-html-parser": "^6.1.13"
+    "node-html-parser": "^6.1.13",
+    "bluebird": "^3.7.2"
   }
 }
